[package]
name = "zx-bip44"
description = "BIP44 HD derivation"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
byteorder = "1.3.4"
